cs160/lab5/parser.output
Terminals unused in grammar

   T_MODULO
   T_GREATEQUAL
   T_GREAT
   T_EXP


State 10 conflicts: 1 shift/reduce
State 27 conflicts: 1 shift/reduce
State 38 conflicts: 5 shift/reduce
State 125 conflicts: 5 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: ClassList

    2 ClassList: Class ClassList
    3          | /* empty */

    4 Class: T_ID ExtendsID T_OPENCURLYBRACKET MemberList MethodList T_CLOSECURLYBRACKET

    5 ExtendsID: T_EXTENDS T_ID
    6          | /* empty */

    7 MemberList: TypeID T_ID T_SEMICOLON MemberList
    8           | Method
    9           | /* empty */

   10 MethodList: Method MethodList
   11           | /* empty */

   12 Method: T_ID T_OPENPAREN ParaList T_CLOSEPAREN T_POINTTO TypeID T_OPENCURLYBRACKET MethodBody T_CLOSECURLYBRACKET

   13 ParaList: T_ID T_COLON TypeID ParaListP
   14         | /* empty */

   15 ParaListP: T_COMMA T_ID T_COLON TypeID ParaListP
   16          | /* empty */

   17 MethodBody: DecList StatList ReturnOp

   18 DecList: TypeID T_ID IDList T_SEMICOLON DecList
   19        | Statement
   20        | /* empty */

   21 TypeID: T_INTEGER
   22       | T_BOOLEAN
   23       | T_NONE
   24       | T_ID

   25 IDList: T_COMMA T_ID IDList
   26       | /* empty */

   27 StatList: Statement StatList
   28         | /* empty */

   29 Statement: Assignment
   30          | MethodCall T_SEMICOLON
   31          | IfElse
   32          | WhileLoop
   33          | RepeatUntil
   34          | Print

   35 ReturnOp: T_RETURN Expression T_SEMICOLON
   36         | /* empty */

   37 Assignment: T_ID IdentifierP T_ASSIGN Expression T_SEMICOLON

   38 IdentifierP: T_DOT T_ID
   39            | /* empty */

   40 IfElse: T_IF Expression T_OPENCURLYBRACKET Statement StatList T_CLOSECURLYBRACKET Else

   41 Else: T_ELSE T_OPENCURLYBRACKET Statement StatList T_CLOSECURLYBRACKET
   42     | /* empty */

   43 WhileLoop: T_WHILE Expression T_OPENCURLYBRACKET Statement StatList T_CLOSECURLYBRACKET

   44 RepeatUntil: T_REPEAT T_OPENCURLYBRACKET Statement StatList T_CLOSECURLYBRACKET T_UNTIL T_OPENPAREN Expression T_CLOSEPAREN T_SEMICOLON

   45 Print: T_PRINT Expression T_SEMICOLON

   46 Expression: Expression T_PLUS Expression
   47           | Expression T_MINUS Expression
   48           | Expression T_MULTIPLY Expression
   49           | Expression T_DIVIDE Expression
   50           | Expression T_LESS Expression
   51           | Expression T_LESSEQUAL Expression
   52           | Expression T_EQUAL Expression
   53           | Expression T_AND Expression
   54           | Expression T_OR Expression
   55           | T_NOT Expression
   56           | T_MINUS Expression
   57           | T_ID
   58           | T_ID T_DOT T_ID
   59           | MethodCall
   60           | T_OPENPAREN Expression T_CLOSEPAREN
   61           | T_NUMBER
   62           | T_TRUE
   63           | T_FALSE
   64           | T_NEW T_ID
   65           | T_NEW T_ID T_OPENPAREN ArguList T_CLOSEPAREN

   66 ArguList: Expression ArguListP
   67         | /* empty */

   68 ArguListP: T_COMMA Expression ArguListP
   69          | /* empty */

   70 MethodCall: T_ID IdentifierP T_OPENPAREN ArguList T_CLOSEPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
T_RETURN (258) 35
T_IF (259) 40
T_WHILE (260) 43
T_EXTENDS (261) 5
T_ELSE (262) 41
T_REPEAT (263) 44
T_UNTIL (264) 44
T_PRINT (265) 45
T_TRUE (266) 62
T_FALSE (267) 63
T_AND (268) 53
T_OR (269) 54
T_NOT (270) 55
T_NEW (271) 64 65
T_INTEGER (272) 21
T_BOOLEAN (273) 22
T_NONE (274) 23
T_DOT (275) 38 58
T_SEMICOLON (276) 7 18 30 35 37 44 45
T_COLON (277) 13 15
T_COMMA (278) 15 25 68
T_OPENPAREN (279) 12 44 60 65 70
T_CLOSEPAREN (280) 12 44 60 65 70
T_OPENCURLYBRACKET (281) 4 12 40 41 43 44
T_CLOSECURLYBRACKET (282) 4 12 40 41 43 44
T_POINTTO (283) 12
T_EQUAL (284) 52
T_ASSIGN (285) 37
T_PLUS (286) 46
T_MINUS (287) 47 56
T_MULTIPLY (288) 48
T_DIVIDE (289) 49
T_MODULO (290)
T_LESSEQUAL (291) 51
T_LESS (292) 50
T_NUMBER (293) 61
T_ID (294) 4 5 7 12 13 15 18 24 25 37 38 57 58 64 65 70
T_GREATEQUAL (295)
T_GREAT (296)
T_EXP (297)
UMINUS (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Start (45)
    on left: 1, on right: 0
ClassList (46)
    on left: 2 3, on right: 1 2
Class (47)
    on left: 4, on right: 2
ExtendsID (48)
    on left: 5 6, on right: 4
MemberList (49)
    on left: 7 8 9, on right: 4 7
MethodList (50)
    on left: 10 11, on right: 4 10
Method (51)
    on left: 12, on right: 8 10
ParaList (52)
    on left: 13 14, on right: 12
ParaListP (53)
    on left: 15 16, on right: 13 15
MethodBody (54)
    on left: 17, on right: 12
DecList (55)
    on left: 18 19 20, on right: 17 18
TypeID (56)
    on left: 21 22 23 24, on right: 7 12 13 15 18
IDList (57)
    on left: 25 26, on right: 18 25
StatList (58)
    on left: 27 28, on right: 17 27 40 41 43 44
Statement (59)
    on left: 29 30 31 32 33 34, on right: 19 27 40 41 43 44
ReturnOp (60)
    on left: 35 36, on right: 17
Assignment (61)
    on left: 37, on right: 29
IdentifierP (62)
    on left: 38 39, on right: 37 70
IfElse (63)
    on left: 40, on right: 31
Else (64)
    on left: 41 42, on right: 40
WhileLoop (65)
    on left: 43, on right: 32
RepeatUntil (66)
    on left: 44, on right: 33
Print (67)
    on left: 45, on right: 34
Expression (68)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65, on right: 35 37 40 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 60 66 68
ArguList (69)
    on left: 66 67, on right: 65 70
ArguListP (70)
    on left: 68 69, on right: 66 68
MethodCall (71)
    on left: 70, on right: 30 59


State 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    $default  reduce using rule 3 (ClassList)

    Start      go to state 2
    ClassList  go to state 3
    Class      go to state 4


State 1

    4 Class: T_ID . ExtendsID T_OPENCURLYBRACKET MemberList MethodList T_CLOSECURLYBRACKET

    T_EXTENDS  shift, and go to state 5

    $default  reduce using rule 6 (ExtendsID)

    ExtendsID  go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: ClassList .

    $default  reduce using rule 1 (Start)


State 4

    2 ClassList: Class . ClassList

    T_ID  shift, and go to state 1

    $default  reduce using rule 3 (ClassList)

    ClassList  go to state 8
    Class      go to state 4


State 5

    5 ExtendsID: T_EXTENDS . T_ID

    T_ID  shift, and go to state 9


State 6

    4 Class: T_ID ExtendsID . T_OPENCURLYBRACKET MemberList MethodList T_CLOSECURLYBRACKET

    T_OPENCURLYBRACKET  shift, and go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 ClassList: Class ClassList .

    $default  reduce using rule 2 (ClassList)


State 9

    5 ExtendsID: T_EXTENDS T_ID .

    $default  reduce using rule 5 (ExtendsID)


State 10

    4 Class: T_ID ExtendsID T_OPENCURLYBRACKET . MemberList MethodList T_CLOSECURLYBRACKET

    T_INTEGER  shift, and go to state 11
    T_BOOLEAN  shift, and go to state 12
    T_NONE     shift, and go to state 13
    T_ID       shift, and go to state 14

    T_ID      [reduce using rule 9 (MemberList)]
    $default  reduce using rule 9 (MemberList)

    MemberList  go to state 15
    Method      go to state 16
    TypeID      go to state 17


State 11

   21 TypeID: T_INTEGER .

    $default  reduce using rule 21 (TypeID)


State 12

   22 TypeID: T_BOOLEAN .

    $default  reduce using rule 22 (TypeID)


State 13

   23 TypeID: T_NONE .

    $default  reduce using rule 23 (TypeID)


State 14

   12 Method: T_ID . T_OPENPAREN ParaList T_CLOSEPAREN T_POINTTO TypeID T_OPENCURLYBRACKET MethodBody T_CLOSECURLYBRACKET
   24 TypeID: T_ID .

    T_OPENPAREN  shift, and go to state 18

    $default  reduce using rule 24 (TypeID)


State 15

    4 Class: T_ID ExtendsID T_OPENCURLYBRACKET MemberList . MethodList T_CLOSECURLYBRACKET

    T_ID  shift, and go to state 19

    $default  reduce using rule 11 (MethodList)

    MethodList  go to state 20
    Method      go to state 21


State 16

    8 MemberList: Method .

    $default  reduce using rule 8 (MemberList)


State 17

    7 MemberList: TypeID . T_ID T_SEMICOLON MemberList

    T_ID  shift, and go to state 22


State 18

   12 Method: T_ID T_OPENPAREN . ParaList T_CLOSEPAREN T_POINTTO TypeID T_OPENCURLYBRACKET MethodBody T_CLOSECURLYBRACKET

    T_ID  shift, and go to state 23

    $default  reduce using rule 14 (ParaList)

    ParaList  go to state 24


State 19

   12 Method: T_ID . T_OPENPAREN ParaList T_CLOSEPAREN T_POINTTO TypeID T_OPENCURLYBRACKET MethodBody T_CLOSECURLYBRACKET

    T_OPENPAREN  shift, and go to state 18


State 20

    4 Class: T_ID ExtendsID T_OPENCURLYBRACKET MemberList MethodList . T_CLOSECURLYBRACKET

    T_CLOSECURLYBRACKET  shift, and go to state 25


State 21

   10 MethodList: Method . MethodList

    T_ID  shift, and go to state 19

    $default  reduce using rule 11 (MethodList)

    MethodList  go to state 26
    Method      go to state 21


State 22

    7 MemberList: TypeID T_ID . T_SEMICOLON MemberList

    T_SEMICOLON  shift, and go to state 27


State 23

   13 ParaList: T_ID . T_COLON TypeID ParaListP

    T_COLON  shift, and go to state 28


State 24

   12 Method: T_ID T_OPENPAREN ParaList . T_CLOSEPAREN T_POINTTO TypeID T_OPENCURLYBRACKET MethodBody T_CLOSECURLYBRACKET

    T_CLOSEPAREN  shift, and go to state 29


State 25

    4 Class: T_ID ExtendsID T_OPENCURLYBRACKET MemberList MethodList T_CLOSECURLYBRACKET .

    $default  reduce using rule 4 (Class)


State 26

   10 MethodList: Method MethodList .

    $default  reduce using rule 10 (MethodList)


State 27

    7 MemberList: TypeID T_ID T_SEMICOLON . MemberList

    T_INTEGER  shift, and go to state 11
    T_BOOLEAN  shift, and go to state 12
    T_NONE     shift, and go to state 13
    T_ID       shift, and go to state 14

    T_ID      [reduce using rule 9 (MemberList)]
    $default  reduce using rule 9 (MemberList)

    MemberList  go to state 30
    Method      go to state 16
    TypeID      go to state 17


State 28

   13 ParaList: T_ID T_COLON . TypeID ParaListP

    T_INTEGER  shift, and go to state 11
    T_BOOLEAN  shift, and go to state 12
    T_NONE     shift, and go to state 13
    T_ID       shift, and go to state 31

    TypeID  go to state 32


State 29

   12 Method: T_ID T_OPENPAREN ParaList T_CLOSEPAREN . T_POINTTO TypeID T_OPENCURLYBRACKET MethodBody T_CLOSECURLYBRACKET

    T_POINTTO  shift, and go to state 33


State 30

    7 MemberList: TypeID T_ID T_SEMICOLON MemberList .

    $default  reduce using rule 7 (MemberList)


State 31

   24 TypeID: T_ID .

    $default  reduce using rule 24 (TypeID)


State 32

   13 ParaList: T_ID T_COLON TypeID . ParaListP

    T_COMMA  shift, and go to state 34

    $default  reduce using rule 16 (ParaListP)

    ParaListP  go to state 35


State 33

   12 Method: T_ID T_OPENPAREN ParaList T_CLOSEPAREN T_POINTTO . TypeID T_OPENCURLYBRACKET MethodBody T_CLOSECURLYBRACKET

    T_INTEGER  shift, and go to state 11
    T_BOOLEAN  shift, and go to state 12
    T_NONE     shift, and go to state 13
    T_ID       shift, and go to state 31

    TypeID  go to state 36


State 34

   15 ParaListP: T_COMMA . T_ID T_COLON TypeID ParaListP

    T_ID  shift, and go to state 37


State 35

   13 ParaList: T_ID T_COLON TypeID ParaListP .

    $default  reduce using rule 13 (ParaList)


State 36

   12 Method: T_ID T_OPENPAREN ParaList T_CLOSEPAREN T_POINTTO TypeID . T_OPENCURLYBRACKET MethodBody T_CLOSECURLYBRACKET

    T_OPENCURLYBRACKET  shift, and go to state 38


State 37

   15 ParaListP: T_COMMA T_ID . T_COLON TypeID ParaListP

    T_COLON  shift, and go to state 39


State 38

   12 Method: T_ID T_OPENPAREN ParaList T_CLOSEPAREN T_POINTTO TypeID T_OPENCURLYBRACKET . MethodBody T_CLOSECURLYBRACKET

    T_IF       shift, and go to state 40
    T_WHILE    shift, and go to state 41
    T_REPEAT   shift, and go to state 42
    T_PRINT    shift, and go to state 43
    T_INTEGER  shift, and go to state 11
    T_BOOLEAN  shift, and go to state 12
    T_NONE     shift, and go to state 13
    T_ID       shift, and go to state 44

    T_IF      [reduce using rule 20 (DecList)]
    T_WHILE   [reduce using rule 20 (DecList)]
    T_REPEAT  [reduce using rule 20 (DecList)]
    T_PRINT   [reduce using rule 20 (DecList)]
    T_ID      [reduce using rule 20 (DecList)]
    $default  reduce using rule 20 (DecList)

    MethodBody   go to state 45
    DecList      go to state 46
    TypeID       go to state 47
    Statement    go to state 48
    Assignment   go to state 49
    IfElse       go to state 50
    WhileLoop    go to state 51
    RepeatUntil  go to state 52
    Print        go to state 53
    MethodCall   go to state 54


State 39

   15 ParaListP: T_COMMA T_ID T_COLON . TypeID ParaListP

    T_INTEGER  shift, and go to state 11
    T_BOOLEAN  shift, and go to state 12
    T_NONE     shift, and go to state 13
    T_ID       shift, and go to state 31

    TypeID  go to state 55


State 40

   40 IfElse: T_IF . Expression T_OPENCURLYBRACKET Statement StatList T_CLOSECURLYBRACKET Else

    T_TRUE       shift, and go to state 56
    T_FALSE      shift, and go to state 57
    T_NOT        shift, and go to state 58
    T_NEW        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_MINUS      shift, and go to state 61
    T_NUMBER     shift, and go to state 62
    T_ID         shift, and go to state 63

    Expression  go to state 64
    MethodCall  go to state 65


State 41

   43 WhileLoop: T_WHILE . Expression T_OPENCURLYBRACKET Statement StatList T_CLOSECURLYBRACKET

    T_TRUE       shift, and go to state 56
    T_FALSE      shift, and go to state 57
    T_NOT        shift, and go to state 58
    T_NEW        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_MINUS      shift, and go to state 61
    T_NUMBER     shift, and go to state 62
    T_ID         shift, and go to state 63

    Expression  go to state 66
    MethodCall  go to state 65


State 42

   44 RepeatUntil: T_REPEAT . T_OPENCURLYBRACKET Statement StatList T_CLOSECURLYBRACKET T_UNTIL T_OPENPAREN Expression T_CLOSEPAREN T_SEMICOLON

    T_OPENCURLYBRACKET  shift, and go to state 67


State 43

   45 Print: T_PRINT . Expression T_SEMICOLON

    T_TRUE       shift, and go to state 56
    T_FALSE      shift, and go to state 57
    T_NOT        shift, and go to state 58
    T_NEW        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_MINUS      shift, and go to state 61
    T_NUMBER     shift, and go to state 62
    T_ID         shift, and go to state 63

    Expression  go to state 68
    MethodCall  go to state 65


State 44

   24 TypeID: T_ID .
   37 Assignment: T_ID . IdentifierP T_ASSIGN Expression T_SEMICOLON
   70 MethodCall: T_ID . IdentifierP T_OPENPAREN ArguList T_CLOSEPAREN

    T_DOT  shift, and go to state 69

    T_ID      reduce using rule 24 (TypeID)
    $default  reduce using rule 39 (IdentifierP)

    IdentifierP  go to state 70


State 45

   12 Method: T_ID T_OPENPAREN ParaList T_CLOSEPAREN T_POINTTO TypeID T_OPENCURLYBRACKET MethodBody . T_CLOSECURLYBRACKET

    T_CLOSECURLYBRACKET  shift, and go to state 71


State 46

   17 MethodBody: DecList . StatList ReturnOp

    T_IF      shift, and go to state 40
    T_WHILE   shift, and go to state 41
    T_REPEAT  shift, and go to state 42
    T_PRINT   shift, and go to state 43
    T_ID      shift, and go to state 72

    $default  reduce using rule 28 (StatList)

    StatList     go to state 73
    Statement    go to state 74
    Assignment   go to state 49
    IfElse       go to state 50
    WhileLoop    go to state 51
    RepeatUntil  go to state 52
    Print        go to state 53
    MethodCall   go to state 54


State 47

   18 DecList: TypeID . T_ID IDList T_SEMICOLON DecList

    T_ID  shift, and go to state 75


State 48

   19 DecList: Statement .

    $default  reduce using rule 19 (DecList)


State 49

   29 Statement: Assignment .

    $default  reduce using rule 29 (Statement)


State 50

   31 Statement: IfElse .

    $default  reduce using rule 31 (Statement)


State 51

   32 Statement: WhileLoop .

    $default  reduce using rule 32 (Statement)


State 52

   33 Statement: RepeatUntil .

    $default  reduce using rule 33 (Statement)


State 53

   34 Statement: Print .

    $default  reduce using rule 34 (Statement)


State 54

   30 Statement: MethodCall . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 76


State 55

   15 ParaListP: T_COMMA T_ID T_COLON TypeID . ParaListP

    T_COMMA  shift, and go to state 34

    $default  reduce using rule 16 (ParaListP)

    ParaListP  go to state 77


State 56

   62 Expression: T_TRUE .

    $default  reduce using rule 62 (Expression)


State 57

   63 Expression: T_FALSE .

    $default  reduce using rule 63 (Expression)


State 58

   55 Expression: T_NOT . Expression

    T_TRUE       shift, and go to state 56
    T_FALSE      shift, and go to state 57
    T_NOT        shift, and go to state 58
    T_NEW        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_MINUS      shift, and go to state 61
    T_NUMBER     shift, and go to state 62
    T_ID         shift, and go to state 63

    Expression  go to state 78
    MethodCall  go to state 65


State 59

   64 Expression: T_NEW . T_ID
   65           | T_NEW . T_ID T_OPENPAREN ArguList T_CLOSEPAREN

    T_ID  shift, and go to state 79


State 60

   60 Expression: T_OPENPAREN . Expression T_CLOSEPAREN

    T_TRUE       shift, and go to state 56
    T_FALSE      shift, and go to state 57
    T_NOT        shift, and go to state 58
    T_NEW        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_MINUS      shift, and go to state 61
    T_NUMBER     shift, and go to state 62
    T_ID         shift, and go to state 63

    Expression  go to state 80
    MethodCall  go to state 65


State 61

   56 Expression: T_MINUS . Expression

    T_TRUE       shift, and go to state 56
    T_FALSE      shift, and go to state 57
    T_NOT        shift, and go to state 58
    T_NEW        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_MINUS      shift, and go to state 61
    T_NUMBER     shift, and go to state 62
    T_ID         shift, and go to state 63

    Expression  go to state 81
    MethodCall  go to state 65


State 62

   61 Expression: T_NUMBER .

    $default  reduce using rule 61 (Expression)


State 63

   57 Expression: T_ID .
   58           | T_ID . T_DOT T_ID
   70 MethodCall: T_ID . IdentifierP T_OPENPAREN ArguList T_CLOSEPAREN

    T_DOT  shift, and go to state 82

    T_OPENPAREN  reduce using rule 39 (IdentifierP)
    $default     reduce using rule 57 (Expression)

    IdentifierP  go to state 83


State 64

   40 IfElse: T_IF Expression . T_OPENCURLYBRACKET Statement StatList T_CLOSECURLYBRACKET Else
   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSEQUAL Expression
   52           | Expression . T_EQUAL Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression

    T_AND               shift, and go to state 84
    T_OR                shift, and go to state 85
    T_OPENCURLYBRACKET  shift, and go to state 86
    T_EQUAL             shift, and go to state 87
    T_PLUS              shift, and go to state 88
    T_MINUS             shift, and go to state 89
    T_MULTIPLY          shift, and go to state 90
    T_DIVIDE            shift, and go to state 91
    T_LESSEQUAL         shift, and go to state 92
    T_LESS              shift, and go to state 93


State 65

   59 Expression: MethodCall .

    $default  reduce using rule 59 (Expression)


State 66

   43 WhileLoop: T_WHILE Expression . T_OPENCURLYBRACKET Statement StatList T_CLOSECURLYBRACKET
   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSEQUAL Expression
   52           | Expression . T_EQUAL Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression

    T_AND               shift, and go to state 84
    T_OR                shift, and go to state 85
    T_OPENCURLYBRACKET  shift, and go to state 94
    T_EQUAL             shift, and go to state 87
    T_PLUS              shift, and go to state 88
    T_MINUS             shift, and go to state 89
    T_MULTIPLY          shift, and go to state 90
    T_DIVIDE            shift, and go to state 91
    T_LESSEQUAL         shift, and go to state 92
    T_LESS              shift, and go to state 93


State 67

   44 RepeatUntil: T_REPEAT T_OPENCURLYBRACKET . Statement StatList T_CLOSECURLYBRACKET T_UNTIL T_OPENPAREN Expression T_CLOSEPAREN T_SEMICOLON

    T_IF      shift, and go to state 40
    T_WHILE   shift, and go to state 41
    T_REPEAT  shift, and go to state 42
    T_PRINT   shift, and go to state 43
    T_ID      shift, and go to state 72

    Statement    go to state 95
    Assignment   go to state 49
    IfElse       go to state 50
    WhileLoop    go to state 51
    RepeatUntil  go to state 52
    Print        go to state 53
    MethodCall   go to state 54


State 68

   45 Print: T_PRINT Expression . T_SEMICOLON
   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSEQUAL Expression
   52           | Expression . T_EQUAL Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression
